# aoc-haskell

./: LICENSE
aoc2024-haskell/: .gitignore  Makefile  README.md  aoc2024-haskell.cabal
aoc2024-haskell/app/: Main.hs
aoc2024-haskell/data/day03/: example.txt
aoc2024-haskell/lib/: Aaa.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day99.hs  Grid.hs  Util.hs
aoc2024-haskell/lib/day01/: Day01.hs
aoc2024-haskell/lib/day02/: Day02.hs
aoc2024-haskell/lib/day99/: Day99.hs
aoc2024-haskell/test/: GridTest.hs
fetch-aoc-data/: .gitignore  LICENSE  Makefile  README.md  fetch-aoc-data.cabal
fetch-aoc-data/app/: Main.hs
