cabal-version:      3.0
name:               aoc2024-haskell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             roycrippen
maintainer:         roycrippen@gmail.com
build-type:         Simple

common warnings
    ghc-options:    -Wall

library
    import:           warnings
    ghc-options:      -O2
    default-extensions:
        BangPatterns
        CPP
        DeriveGeneric
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        TemplateHaskell
    exposed-modules:
        Day01,
        Day02,
        Day99,
        Util
    hs-source-dirs:
        lib,
        lib/day01,
        lib/day02,
        lib/day99,
    default-language: GHC2021
    build-depends:
        base ^>= 4.18,
        bytestring,
        containers,
        -- data-memocombinators,
        deepseq,
        -- dlist,
        file-embed,
        -- hashable,
        -- memoize,
        parallel,
        -- regex-posix,
        template-haskell,
        text,
        -- unordered-containers,
        vector,
        vector-algorithms,


executable aoc2024-haskell
    import:           warnings
    -- ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    ghc-options:      -O2 
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        RecordWildCards
    build-depends:
        base ^>= 4.18,
        aoc2024-haskell,
        time,
        deepseq,
