cabal-version:      3.0
name:               aoc2024-haskell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             roycrippen
maintainer:         roycrippen@gmail.com
build-type:         Simple

-- Common settings
common warnings
    ghc-options:    -Wall

common exe-common
    import:           warnings
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: GHC2021
    build-depends:
        base ^>= 4.18,
        aoc2024-haskell

-- Library
library
    import:           warnings
    ghc-options:      -O2
    default-extensions:
        BangPatterns
        CPP
        DeriveGeneric
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        TemplateHaskell
    exposed-modules:
        Day01,
        Day02,
        Day99,
        Util
    hs-source-dirs:
        lib
    default-language: GHC2021
    build-depends:
        base ^>= 4.18,
        bytestring,
        containers,
        deepseq,
        file-embed,
        parallel,
        template-haskell,
        text,
        vector-algorithms,
        vector,

-- Executable (now in root app/ folder next to .cabal file)
executable aoc2024-haskell
    import:           exe-common
    main-is:          Main.hs
    hs-source-dirs:   app
    default-extensions:
        RecordWildCards
    build-depends:
        deepseq,        
        optparse-applicative,
        time,
