cabal-version:      3.0
name:               aoc2024-haskell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             roycrippen
maintainer:         roycrippen@gmail.com
build-type:         Simple

-- Common settings
common warnings
    ghc-options:    -Wall

common exe-common
    import:           warnings
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: GHC2021
    build-depends:
        base ^>= 4.18,
        aoc2024-haskell

library
    import:           warnings
    ghc-options:      -O2
    default-extensions:
        BangPatterns
        CPP
        DeriveGeneric
        OverloadedRecordDot
        OverloadedStrings
        RecordWildCards
        TemplateHaskell
    exposed-modules:
        Aaa,
        Day01,
        Day02,
        Day03,
        Day04,
        Day99,
        Grid,
        Util
    hs-source-dirs:
        lib
    default-language: GHC2021
    build-depends:
        base ^>= 4.18,
        bytestring,
        containers,
        deepseq,
        file-embed,
        massiv ^>= 1.0, 
        parallel,
        template-haskell,
        text,
        vector-algorithms,
        vector,

executable aoc2024-haskell
    import:           exe-common
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        deepseq,        
        optparse-applicative,
        time,

test-suite grid-tests
  type:               exitcode-stdio-1.0
  main-is:            GridTest.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base
    , aoc2024-haskell
    , tasty
    , tasty-hunit
    , bytestring
    , massiv ^>= 1.0