cabal-version:      3.0
name:               fetch-aoc-data
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             roycrippen
maintainer:         roycrippen@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable fetch-aoc-data
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18,
        bytestring,
        directory,
        filepath,
        http-client-tls,
        http-client,
        http-types,
        text
    hs-source-dirs:   app
    default-language: GHC2021
